single book page, todo reviews, edit, delete

--- a/UI/src/books/BookCard.css
+++ b/UI/src/books/BookCard.css
@@ -1,5 +1,10 @@
 .book-card-container {
   padding: 10px;
+  display: flow-root;
+}
+
+.book-card-container:hover {
+  cursor: pointer;
 }
 
 .book-card-img {
