edit, edit image and delete book, todo reviews

--- a/UI/src/book/SingleBookCard.css
+++ b/UI/src/book/SingleBookCard.css
@@ -31,6 +31,7 @@
 }
 
 .single-book-button-container {
-  display: flex;
-  align-items: flex-end;
+  display: flow-root;
+  /* display: flex;
+  align-items: flex-end; */
 }
