--- a/UI/src/index.css
+++ b/UI/src/index.css
@@ -23,3 +23,11 @@
 .text-linebreak {
   white-space: pre-line;
 }
+
+.floating-label {
+  padding: 5px;
+}
+
+.margin-right {
+  margin-right: 1px solid rgba(0, 0, 0, 0.175);
+}
